test/files/neg/plugin-before-parser/lib/plugins.jar.desired.sha1
2e05e73ed90aaf286fa6555d992c1da18de3ceca ?plugins.jar
